tests/invalid/MethodCall_Invalid_3.whiley
method main(int[] this) -> void:
    this.f(1)
